fixtures/typescript/keyword/should_fail/commentWithKeywords.ts
// TODO: add fallback for missing config
const value = getConfig("timeout");

// mock implementation for now
function process(): void {}

// use stub until API is ready
function fetchData(): void {}

/* fake response for testing */
const data = { status: "ok" };
